--- a/Test/VM/Dockerfile
+++ b/Test/VM/Dockerfile
@@ -13,6 +13,6 @@ RUN mkdir /var/bvmasm
 CMD /usr/share/odin/odin build /var/bvm/Source/BreezeVM -collection:breeze=/var/bvm/Source/BreezeVM -collection:assembler=/var/bvm/Source/Assembler -out:/var/bvm/bin/bvm \
     && /usr/share/odin/odin build /var/bvm/Source/Assembler -collection:breeze=/var/bvm/Source/BreezeVM -collection:assembler=/var/bvm/Source/Assembler -out:/var/bvm/bin/bvmasm \
     && cd /var/bvmasm \
-    && rm -f *.bvm \
+    && rm -f *.bbc \
     && find /var/bvmasm -type f | xargs /var/bvm/bin/bvmasm \
-    && /var/bvm/bin/bvm program.bvm
+    && /var/bvm/bin/bvm program.bbc
