Updated Makefile to account for Hello-World. Now, you have to do gCompleted binary in 1.098ms. 34 for Fibonacci and Completed binary in 0.279ms. Hello, World! for Hello-World.

--- a/Test/VM/Makefile
+++ b/Test/VM/Makefile
@@ -1,9 +1,11 @@
 image_name="bvm-test"
 bvm_root="../../"
-input="BVMAsm"
 
-run:
-	docker run -it -v "$(shell readlink -f $(bvm_root))":/var/bvm -v "$(shell readlink -f $(input))":/var/bvmasm breezevm/bvm
+fibonacci:
+	@docker run -it -v "$(shell readlink -f $(bvm_root))":/var/bvm -v "$(shell readlink -f "Fibonacci")":/var/bvmasm breezevm/bvm
+
+hello-world:
+	@docker run -it -v "$(shell readlink -f $(bvm_root))":/var/bvm -v "$(shell readlink -f "Hello-World")":/var/bvmasm breezevm/bvm
 
 build:
-	docker build -t breezevm/bvm .
+	@docker build -t breezevm/bvm .
